# esp32c6-single-cell-charger

./: .gitignore  CMakeLists.txt  DEVELOPMENT.md  Makefile  README.md  USAGE.md  WIRING.md  partitions.csv  sdkconfig
data/: .env.example
images/: pin_layout.avif
main/: CMakeLists.txt  Kconfig.projbuild  config.c  config.h  dashboard.html  influxdb.c  influxdb.h  main.c  provisioning.c  provisioning.h  provisioning.html  sensor.c  sensor.h  success.html  time_manager.c  time_manager.h  webserver.c  webserver.h  wifi_manager.c  wifi_manager.h
